<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/shoe"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/EnterHeight"
        android:id="@+id/heightText"
        android:layout_alignParentTop="true"
        android:maxLines="1"
        android:layout_centerHorizontal="true" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/textView2"
        android:onClick="onRadioButtonClicked"
        android:layout_alignRight="@+id/calculate">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Male"
        android:id="@+id/radioButton"
        android:checked="false"
        android:layout_alignTop="@+id/radioButton2"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Female"
        android:id="@+id/radioButton2"
        android:checked="false"
        android:layout_below="@+id/height"
        android:layout_alignRight="@+id/heightText"
        android:layout_alignEnd="@+id/heightText" />
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/height"
        android:gravity="center"
        android:maxLines="1"
        android:layout_below="@+id/heightText"
        android:layout_alignLeft="@+id/calculate"
        android:layout_alignStart="@+id/calculate"
        android:layout_alignRight="@+id/calculate"
        android:layout_alignEnd="@+id/calculate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Gender"
        android:id="@+id/textView2"
        android:layout_below="@+id/height"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calc"
        android:id="@+id/calculate"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Shoe Size"
        android:id="@+id/textView4"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/calculate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="-"
        android:id="@+id/shoeSize"
        android:layout_alignTop="@+id/textView4"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Inches"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/height"
        android:layout_toRightOf="@+id/heightText"
        android:layout_toEndOf="@+id/heightText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="(US Size)"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView4"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-9617617901018660/2337507839"
        >
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
